- Add loading animation - New destination selector in the form

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div class="wrapper">
         <div id="side-nav"></div>
         <div class="se-pre-con"></div>
+        <div class="se-loading-function" id="se-loading-function"></div>
         <div id="content">
             <!-- START CONTENT  -->
             <div class="map" id="map" ></div>
