--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -98,9 +98,9 @@
             </div>
             <div class="form-group">
                 <label class="mr-sm-2">Departure</label>
-                <select class="form-control" id="destination_select">
-                    <option disabled selected>Departure...</option>
-                </select>
+                <input list="destination_browser" onfocus="this.value=''" autoComplete="off" class="form-control" id="destination_select" value="Departure ..."/>
+                    <datalist id="destination_browser">
+                    </datalist>
             </div>
 
         </form>
