--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -8,7 +8,7 @@
     </div>
 
     <ul class="list-unstyled CTAs">
-        <form id="trip_form">
+        <form id="trip_form" onsubmit="return false">
             <div class="form-group">
                 <input class="form-control" type="date" value="" id="selected_date">
             </div>
@@ -98,7 +98,7 @@
             </div>
             <div class="form-group">
                 <label class="mr-sm-2">Departure</label>
-                <input list="destination_browser" onfocus="this.value=''" autoComplete="off" class="form-control" id="destination_select" value="Departure ..."/>
+                <input list="destination_browser" type="text" onfocus="this.value=''" autoComplete="off" class="form-control" id="destination_select" value="Departure ..."/>
                     <datalist id="destination_browser">
                     </datalist>
             </div>
