- Corrective on modals

--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -56,7 +56,7 @@
                     <label data-toggle="tooltip" data-placement="bottom" title="Uniquement les trajets sans arrêts" class="btn btn-outline-secondary active text-white">
                         <input type="radio" name="trip_type" id="direct" autocomplete="off" checked> Direct
                     </label>
-                    <label data-toggle="tooltip" data-placement="bottom" title="Trajet comprennant au plus un arrêt en gare" class="btn btn-outline-secondary text-white">
+                    <label data-toggle="tooltip" data-placement="bottom" title="Trajet comprenant au plus un arrêt en gare" class="btn btn-outline-secondary text-white">
                         <input type="radio" name="trip_type" id="indirect" autocomplete="off"> Indirect
                     </label>
                 </div>
