--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                     </div>
                     <div class="modal-body">
                         <p>Bienvenue sur Lhokho !</p>
-                        <p>Ce portail vous permettra de cherchez vos billets à partir de la base des données SNCF mise à disposition sur le site OpenData.</p>
-                        <p>Vous pourrez ensuite selectionner une gare et une date de départ (et un retour potentiel) selon différent critères...</p>
+                        <p>Ce portail vous permettra de chercher vos billets à partir de la base des données SNCF mise à disposition sur le site OpenData.</p>
+                        <p>Vous pourrez ensuite selectionner une gare et une date de départ (et un retour potentiel) selon différents critères...</p>
                         <p>Pour un Max de précision dans la disponibilité réelle des billets nous vous conseillons d'utiliser le site en début de journée.</p>
                         <h5 class="modal-title">Faire une recherche</h5>
-                        <p>Rendez-vous sur la navigation à gauche de votre écran ou selectionnez directement par un double-clic une gare depuis la carte des destination (votre date sera alors par défaut celle du lendemain).</p>
+                        <p>Rendez-vous sur la navigation à gauche de votre écran ou selectionnez directement par un double-clic une gare depuis la carte des destinations (votre date sera alors par défaut celle du lendemain).</p>
                         <h5 class="modal-title">Types de pointeurs</h5>
-                        <p>Sur la carte il existe différent marqueurs symbolisant les états des gares...</p>
+                        <p>Sur la carte il existe différents marqueurs symbolisant les états des gares...</p>
                         <div class="card text-center">
                             <div class="card-header">
                                 <ul class="nav nav-tabs card-header-tabs justify-content-center">
