Add a cookie to hide the modal box; Readd the train animation on the first search

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
     <div class="wrapper">
         <div id="side-nav"></div>
-        <div class="se-pre-con"></div>
+        <div class="se-pre-con" id="se-pre-con"></div>
         <div class="se-loading-function" id="se-loading-function"></div>
         <div id="content">
             <!-- START CONTENT  -->
