--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </script>
 
 
-    <title>lhokho</title>
+    <title>Lhokho</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/icons/favicon.ico">
 
     <!-- Bootstrap CSS CDN -->
