--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -3,7 +3,7 @@
 <!-- Sidebar html content -->
 <nav id="sidebar">
     <div class="sidebar-header" id="sidebarCollapse">
-        <h3>LhoKho</button></h3>
+        <h3>LhoKho <img src="images/icons/logo.png" width="40%" height="40%"></h3>
         <strong>LK</strong>
     </div>
     <ul class="list-unstyled CTAs">
