- Add Search button

--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -101,7 +101,7 @@
                     <datalist id="destination_browser">
                     </datalist>
             </div>
-            <button data-toggle="tooltip" title="Cliquez ici pour démarrer la recherche" type="button" class="btn btn-primary btn-lg btn-block"><i class="fas fa-search"></i></button>
+            <button id="search_btn" data-toggle="tooltip" title="Cliquez ici pour démarrer la recherche" type="button" class="btn btn-primary btn-lg btn-block"><i class="fas fa-search"></i></button>
         </form>
     </ul>
     <div data-toggle="tooltip" data-placement="top" title="Obtenir des informations concernant la carte..." class="sidebar-header" id="infoCollapse">
