--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <h4 class="modal-title">Comment lancer la lhokho ?</h4>
                         </div>
                         <div class="modal-body">
-                            <p>Bienvenue sur Lhokho ! Vérification Effiliation</p>
+                            <p>Bienvenue sur Lhokho !</p>
                             <p>Ce portail vous permettra de chercher vos billets TGVmax à partir de la base des données SNCF mise à disposition sur le site OpenData.</p>
                             <p>Vous pourrez ensuite selectionner une gare et une date de départ (et un retour potentiel) selon différents critères...</p>
                             <p>Pour un Max de précision dans la disponibilité réelle des billets nous vous conseillons d'utiliser le site en début de journée.</p>
