--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
                             <h4 class="modal-title">Comment lancer la lhokho ?</h4>
                         </div>
                         <div class="modal-body">
+                            <a href="https://track.effiliation.com/servlet/effi.click?id_compteur=22683068" target="_blank">
+                                <img src="https://track.effiliation.com/servlet/effi.show?id_compteur=22683068" alt="pub" border="0"/>
+                            </a>
+                            <script type="text/javascript">
+                                document.write('<a href="https:\/\/track.effiliation.com\/servlet\/effi.click?id_compteur=22683068" target="_blank">');
+                                document.write('<img src="https:\/\/track.effiliation.com\/servlet\/effi.show?cachebuster='+(new Date()).getTime()+'&id_compteur=22683068" alt="pub" border="0" />');
+                                document.write('</a>');
+                            </script>
                             <p>Bienvenue sur Lhokho !</p>
                             <p>Ce portail vous permettra de chercher vos billets TGVmax à partir de la base des données SNCF mise à disposition sur le site OpenData.</p>
                             <p>Vous pourrez ensuite selectionner une gare et une date de départ (et un retour potentiel) selon différents critères...</p>
