--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             </div>
                             <br>
                             <h5 class="modal-title">Tout compris ? Prêt à partir en voyage ?</h5>
-                            <p>Site crée à visée non commerciale. Toutes les données sont tirées de sources libres et ouvertes, <a style="font-weight:bold;" href="https://ressources.data.sncf.com/explore">propriétées de la SNCF</a>. Pour plus de détails, n'hésitez pas à <a style="font-weight:bold;" href="mailto:lhokho@gmail.com">contacter</a> les créateurs. </p>
+                            <p>Toutes les données sont tirées de sources libres et ouvertes, <a style="font-weight:bold;" href="https://ressources.data.sncf.com/explore">propriétées de la SNCF</a>. Pour plus de détails, n'hésitez pas à <a style="font-weight:bold;" href="mailto:lhokho@gmail.com">contacter</a> les créateurs. </p>
                         </div>
 
                         <div class="modal-footer">
