--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
         gtag('config', 'UA-175558449-1');
     </script>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2141233781325081"
+     crossorigin="anonymous"></script>
 
     <title>Lhokho</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/icons/favicon.ico">
